<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.protectme.HomeActivity">
   <!-- <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
  <!--  <item
        android:id="@+id/guide_setting"
        android:orderInCategory="101"
        android:title="@string/guide_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/history_setting"
        android:orderInCategory="102"
        android:title="@string/history_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/family_setting"
        android:orderInCategory="102"
        android:title="@string/family_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logout_setting"
        android:orderInCategory="102"
        android:title="@string/logout_setting"
        app:showAsAction="never"
        />

</menu>
