<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.protectme.EvidenceSelectActivity"
    tools:showIn="@layout/activity_evidence_select">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picturebtn"
        android:id="@+id/button"
        android:onClick="startcapture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videobtn"
        android:id="@+id/button2"
        android:onClick="startVideo"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/imageView1"
        android:layout_below="@+id/button2"
         />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordstartbtn"
        android:id="@+id/btnStartRecord"
        android:onClick="startVoiceRecord"
        android:layout_below="@+id/imageView1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordstopbtn"
        android:id="@+id/btnStopRecord"
        android:onClick="stopVoiceRecord"
        android:layout_alignBaseline="@+id/btnStartRecord"
        android:layout_toEndOf="@+id/btnStartRecord"
        android:layout_toRightOf="@+id/btnStartRecord"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorduploadbtn"
        android:id="@+id/btnUploadRecord"
        android:onClick="uploadVoiceRecord"
        android:layout_alignBaseline="@+id/btnStartRecord"
        android:layout_toEndOf="@+id/btnStopRecord"
        android:layout_toRightOf="@+id/btnStopRecord"
        />
</RelativeLayout>
