<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.protectme.HomeActivity"
    tools:showIn="@layout/activity_home">


    <Button
        android:text="@string/kidnapbtn"
        android:id="@+id/btnKidnap"
        style="@style/HomeBtn"
        android:background="@drawable/home_buttons"
        android:onClick="startRealtimeTrack"
        android:layout_centerHorizontal="true"
         />
    <Button
        style="@style/HomeBtn"
        android:text="@string/robberybtn"
        android:id="@+id/btnRobbery"
        android:background="@drawable/home_buttons"
        android:layout_below="@+id/btnKidnap"
        android:layout_centerHorizontal="true"
        />

    <Button
        style="@style/HomeBtn"
        android:text="@string/evidencebtn"
        android:layout_below="@+id/btnRobbery"
        android:background="@drawable/home_buttons"
        android:id="@+id/btnEvidence"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>

