<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.protectme.HistoryDetailsActivity"
    tools:showIn="@layout/activity_history_details">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="100dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            style="@style/historydetailtable"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/casedate"
                style="@style/tbltext"
                android:id="@+id/txtDateShow"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDate"
                android:text="2015/2/3"
                style="@style/tbltext"
                android:layout_column="1"
                android:layout_alignParentTop="true"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            style="@style/historydetailtable"
            android:layout_height="wrap_content">
            <TextView
                style="@style/tbltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casetime"
                android:id="@+id/txtTimeShow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTime"
                android:text="6.57 PM"
                style="@style/tbltext"
                android:layout_column="1"
                android:layout_alignParentTop="true"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            style="@style/historydetailtable"
            android:layout_height="wrap_content">
            <TextView
                style="@style/tbltext"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caseid"
                android:id="@+id/txtIdShow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtId"
                style="@style/tbltext"
                android:text="21"
                android:layout_column="1"

                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            style="@style/historydetailtable"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casetype"
                style="@style/tbltext"
                android:id="@+id/txtTypeShow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtType"
                android:text="Robbery"
                style="@style/tbltext"
                android:layout_column="1"

                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            style="@style/historydetailtable"
            android:layout_height="wrap_content">
            <TextView
                style="@style/tbltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casestatus"
                android:id="@+id/txtLatitudeShow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLatitude"
                android:text="Pending"
                style="@style/tbltext"
                android:layout_column="1"
                android:layout_alignParentTop="true"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtLongitudeShow"
                />
            <TextView
                android:layout_column="1"
                android:text="New Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLongitude"

                />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Close Case"
        android:id="@+id/btnCloseCase"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_below="@+id/tableLayout"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_alignEnd="@+id/tableLayout" />


</RelativeLayout>
